<resources>

    <string name="app_name" translatable="false">Document OCR</string>

    <string name="back">Back</string>
    <string name="validate">Validate</string>
    <string name="next">Next</string>

    <string name="hostname">Hostname</string>
    <string name="db_name">Database Name</string>
    <string name="login">Username</string>
    <string name="password">Password</string>
    <string name="btn_login_enter">LOGIN</string>

    <string name="request_permission">This app needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="credits">Created by Alexandre Díaz - 2019</string>

    <string name="login_invalid">Invalid Login or Password</string>
    <string name="init_app_error">Error initializing app :S &#8230;</string>

    <string name="title_camera_activity">Camera OCR</string>
    <string name="title_login_activity">Login</string>
    <string name="title_dnie_activity">DNIe NFC</string>

    <string name="op_dgtinit2">Waiting DNIe&#8230;</string>
    <string name="op_finished">DNIe readed successfully :)</string>
    <string name="op_finished_info">Please, remove the document from the reader</string>
    <string name="op_approximate_dnie">Approximate DNIe to the device</string>

    <string name="result_nok_title">Operation Error</string>
    <string name="result_nok_description">The operation can\'t be completed successfully</string>

    <string name="info_titl_sujeto">PERSON DATA</string>
    <string name="info_name">Name</string>
    <string name="info_surname">Surname</string>
    <string name="info_numdoc">Document Num.</string>
    <string name="info_caducity">Caducity</string>
    <string name="info_birth">Birthday</string>
    <string name="info_birth_place">Birth place</string>
    <string name="info_titl_contact">CONTACT DATA</string>
    <string name="info_country">Country</string>
    <string name="info_address">Address</string>
    <string name="info_province">Province</string>
    <string name="info_location">Location</string>
    <string name="info_expedition">Expedition</string>

    <string name="op_reinit">Connection lost. Try it again</string>
    <string name="process_msg_lectura">Reading DNIe&#8230;</string>
    <string name="process_title">DNIe version 3.0</string>
    <string name="process_msg_dni">Accesing to DNIe</string>
    <string name="nfc_error_read">And error occurred while reading DG\'s</string>
    <string name="nfc_error_lost">Communication error. Connection with DNIe lost.</string>
    <string name="nfc_error_files">An error occurred while reading files:</string>
    <string name="nfc_error_CAN">Error to mount PACE channel. Invalid CAN.</string>
    <string name="nfc_reading">Reading data&#8230;</string>
    <string name="nfc_reading_photo">Reading photo&#8230;</string>
    <string name="nfc_reading_signature">Reading  signature&#8230;</string>
    <string name="nfc_read_dnie">READ DNIe</string>
    <string name="nfc_error">Oops, Error! Can\'t initialize NFC reader</string>

    <string name="activity_error_open">This application had been irregularly opened.</string>

    <string name="title_dni_can">DNIe CAN</string>
    <string name="op_can_text2">CAN is the indentifier that allows you to establish the connection with the DNIe. Appears on the front of the document</string>
    <string name="start_read">Start Read</string>
    <string name="help_can_len">CAN have a length of 6 digits</string>
    <string name="insert_can">Insert CAN</string>
    <string name="position_can">Position of the CAN</string>

    <string name="title_dnie_error">DNIe ERROR</string>
    <string name="title_dnie_result">DNIe Info</string>
    <string name="title_ocrb_result">OCR-B Info</string>

    <string name="info_genre">Genre</string>
    <string name="info_nation">Nation</string>
    <string name="info_expiry_permanent">Permanent (>=70 Years)</string>

    <string name="jsonrpc_partner_created">Partner Successfully Created!</string>
    <string name="jsonrpc_partner_error">Error! Can\'t create new partner :/ Please, try again.</string>

    <string name="error_no_camera">This device doesn\'t support this option. No camera has been detected.</string>
    <string name="error_no_nfc">This device doesn\'t support this option. No NFC has been detected.</string>
    <string name="error_disabled_nfc">To use this option you must first activate the NFC</string>

    <string name="info_app_message">European Regional Development Fund. A way to make Europe.</string>

    <string name="camara_sdc">Camara de Comercio de Santiago de Compostela</string>
    <string name="european_union">European Union</string>
    <string name="alda_hotels">Alda Hotels</string>

    <string name="server">Server</string>
    <string name="user_account">User Account</string>
    <string name="app_title_nfc">DNIe Lectura: NFC</string>
    <string name="logout">LOGOUT</string>
    <string name="select_read_mode">SELECT\nREAD MODE</string>
    <string name="sending">Sending&#8230;</string>
    <string name="user_sign">User Sign</string>
    <string name="user_photo">User Photo</string>

    <string name="ocrb_image_section">OCR-B Image Section</string>

    <string name="no_description">No Description</string>
</resources>
