<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_odoo"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:fontFamily="@font/open_sans_bold"
        android:scaleType="centerCrop"
        android:text="@string/title_dni_can"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:background="@color/colorBackground"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/position_can"
        android:src="@drawable/dnie_can"/>

    <TextView
        android:id="@+id/can_TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/op_can_text2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:digits="1234567890"
        android:importantForAutofill="no"
        android:hint="@string/insert_can"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextHint"
        android:ems="6"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:inputType="number"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStartRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/open_sans_bold"
        android:padding="15dp"
        android:text="@string/start_read"
        android:textColor="@color/colorTextPrimary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttons_height"
        android:background="@color/colorBackground">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/back" />
    </FrameLayout>

</LinearLayout>