<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_odoo"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:background="@color/colorBackground"
		android:fontFamily="@font/open_sans_bold"
		android:scaleType="centerCrop"
		android:text="@string/title_ocrb_result"
		android:textAlignment="center"
        android:layout_marginBottom="50dp"
		android:textColor="@color/colorTextPrimary"
		android:textSize="36sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/imgOCR"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="10dp"
			android:transitionName="ocr-img"
			android:contentDescription="@string/ocrb_image_section"
			app:srcCompat="@drawable/alert_dialog_icon" />

		<TableLayout
			android:id="@+id/data_table"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorBackgroundAlpha"
			android:padding="20dp"
			android:stretchColumns="1">

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_span="2"
					android:drawableStart="@drawable/ic_perm_identity_black_24dp"
					android:drawablePadding="5sp"
					android:gravity="start"
					android:text="@string/info_titl_sujeto"
					android:textColor="@color/colorPrimary"
					android:textSize="24sp"
					android:textStyle="bold" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_01_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_name"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_01"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_02_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_surname"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_02"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_03_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_numdoc"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_03"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_03_title_caducity"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_caducity"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_03_caducity"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_10_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_expedition"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_10"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_07_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_birth"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_07"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_08_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_nation"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_08"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_genre_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="3dp"
					android:gravity="start"
					android:padding="1dp"
					android:text="@string/info_genre"
					android:textColor="@color/colorTextPrimary"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_sex"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="start"
					android:padding="1dp"
					android:textColor="@color/colorTextPrimary" />
			</TableRow>
		</TableLayout>

	</LinearLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/buttons_height"
		android:background="@color/colorBackground">

		<Button
			android:id="@+id/btnBack"
			android:layout_width="@dimen/button_width"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="@color/colorPrimary"
			android:text="@string/back" />

		<Button
			android:id="@+id/btnValidate"
			android:layout_width="@dimen/button_width"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|end"
			android:background="@color/colorPrimary"
			android:text="@string/validate" />
	</FrameLayout>

</LinearLayout>