<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:fontFamily="@font/open_sans_bold"
		android:scaleType="centerCrop"
		android:text="@string/app_name"
		android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
		android:textColor="@color/colorTextPrimary"
		android:textSize="36sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_app_message"
        android:textSize="22dp"
        android:layout_marginBottom="20dp"
        android:padding="8dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ccs" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ue" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textSize="22dp"
        android:layout_marginBottom="20dp"
        android:padding="8dp"/>

    <FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Button
			android:id="@+id/btnBack"
			android:layout_width="110dp"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentBottom="true"
			android:layout_gravity="bottom"
			android:layout_marginStart="10dp"
			android:layout_marginBottom="35dp"
			android:background="@color/colorPrimary"
			android:text="@string/back"
			android:textColor="@color/colorTextPrimary" />

	</FrameLayout>

</LinearLayout>