<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_odoo"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:adjustViewBounds="true"
		android:fontFamily="@font/open_sans_bold"
		android:scaleType="centerCrop"
		android:text="@string/title_dnie_result"
		android:textAlignment="center"
		android:textColor="@color/colorTextPrimary"
		android:textSize="36sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<ImageView
					android:id="@+id/CITIZEN_data_tab_00"
					android:layout_width="90dip"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_alignParentEnd="true"
					android:layout_gravity="right"
					android:layout_marginTop="10sp"
					android:layout_marginRight="10sp"
					android:adjustViewBounds="true"
					android:padding="2dp"
					android:scaleType="centerCrop"
					android:src="@drawable/noface" />

				<ImageView
					android:id="@+id/CITIZEN_data_tab_00_SIGNATURE"
					android:layout_width="90dip"
					android:layout_height="wrap_content"
					android:layout_below="@+id/CITIZEN_data_tab_00"
					android:layout_alignStart="@+id/CITIZEN_data_tab_00"
					android:layout_gravity="right"
					android:layout_marginTop="10sp"
					android:layout_marginRight="10sp"
					android:adjustViewBounds="true"
					android:padding="2dp"
					android:scaleType="centerCrop"
					android:visibility="invisible" />
			</LinearLayout>

			<TableLayout
				android:id="@+id/data_table"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentTop="true"
				android:layout_marginTop="50dp"
				android:padding="20dp"
				android:stretchColumns="1">

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_span="2"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_titl_sujeto"
						android:textStyle="bold" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_01_title"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_name"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_01"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_02_title"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_surname"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_02"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_03_title"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_numdoc"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_03"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_03_title_caducity"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_caducity"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_03_caducity"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_07_title"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_birth"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_07"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_10_title"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_expedition"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_10"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/CITIZEN_data_tab_08_title"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginRight="3dp"
						android:gravity="left"
						android:padding="1dp"
						android:text="@string/info_birth_place"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/CITIZEN_data_tab_08"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:gravity="left"
						android:padding="1dp" />
				</TableRow>
			</TableLayout>

		</FrameLayout>

		<TableLayout
			android:id="@+id/data_table2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/data_table"
			android:layout_marginTop="10dp"
			android:layout_toEndOf="@+id/btnBack"
			android:padding="20dp"
			android:shrinkColumns="1"
			android:stretchColumns="1">

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_span="2"
					android:gravity="center"
					android:text="@string/info_titl_contacto"
					android:textStyle="bold" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_09_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginRight="3dp"
					android:gravity="left"
					android:padding="1dp"
					android:text="@string/info_country"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_09"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:maxLines="3"
					android:padding="1dp"
					android:singleLine="false" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_04_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginRight="3dp"
					android:gravity="left"
					android:padding="1dp"
					android:text="@string/info_address"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_04"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:maxLines="3"
					android:padding="1dp"
					android:singleLine="false" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_05_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginRight="3dp"
					android:gravity="left"
					android:padding="1dp"
					android:text="@string/info_provincia"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_05"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/CITIZEN_data_tab_06_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginRight="3dp"
					android:gravity="left"
					android:padding="1dp"
					android:text="@string/info_localidad"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_06"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp" />
			</TableRow>
		</TableLayout>

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/btnBack"
				android:layout_width="110dp"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentBottom="true"
				android:layout_gravity="bottom"
				android:layout_marginStart="10dp"
				android:layout_marginBottom="35dp"
				android:background="@color/colorPrimary"
				android:text="@string/back"
				android:textColor="@color/colorTextPrimary" />

			<Button
				android:id="@+id/btnValidate"
				android:layout_width="110dp"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentBottom="true"
				android:layout_gravity="bottom|right"
				android:layout_marginEnd="10dp"
				android:layout_marginBottom="35dp"
				android:background="@color/colorPrimary"
				android:text="@string/validate"
				android:textColor="@color/colorTextPrimary" />
		</FrameLayout>

	</LinearLayout>

</LinearLayout>